tests/ui/expressions/struct-expressions/struct-expression-named-initializer-type-2.stderr
error[E0308]: mismatched types
  --> $DIR/struct-expression-named-initializer-type-2.rs:13:14
   |
LL |         age: "maria".to_string(),
   |              ^^^^^^^^^^^^^^^^^^^ expected `u16`, found `String`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
